# SpaceCAL

./: .gitignore  LICENSE  README.md  RawImuData_Acceleration.txt  RawImuData_AngularVelocity.txt  afile.txt  button_data.txt  cleanup.sh  pytest.ini  test.py  test.sh
bag_recorder/: setup.py
data/april/: button_data.txt  rawImu_acc.txt  rawImu_angular.txt
data/may/: button_data.txt  rawImu_acc.txt  rawImu_angular.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: spacecal_control.py  spacecal_launch.py  spacecal_motor.py  spacecal_motors.py  spacecal_pi_test.py  spacecal_print_motor_test.py  spacecal_proj_test.py  spacecal_test.py  spacecal_video.py
log/: latest_build
my_bag/Apr-13-2022/21:57:50/: 21:57:50_0.db3  metadata.yaml
my_bag/Apr-19-2022/16:15:30/: 16:15:30_0.db3  metadata.yaml
my_bag/Apr-19-2022/16:1:58/: 16:1:58_0.db3  metadata.yaml
my_bag/Apr-22-2022/16:55:57/: 16:55:57_0.db3  16:55:57_0.db3-shm  16:55:57_0.db3-wal
my_bag/Apr-22-2022/17-10-58/: 17-10-58_0.db3  17-10-58_0.db3-shm  17-10-58_0.db3-wal
my_bag/Apr-22-2022/17-39-15/: 17-39-15_0.db3  17-39-15_0.db3-shm  17-39-15_0.db3-wal
my_bag/Apr-22-2022/17-48-55/: 17-48-55_0.db3  17-48-55_0.db3-shm  17-48-55_0.db3-wal
my_bag/Apr-22-2022/17-8-2/: 17-8-2_0.db3  17-8-2_0.db3-shm  17-8-2_0.db3-wal
my_bag/Apr-25-2022/13-35-35/: 13-35-35_0.db3  13-35-35_0.db3-shm  13-35-35_0.db3-wal
my_bag/Apr-25-2022/13-40-25/: 13-40-25_0.db3-shm  13-40-25_0.db3-wal
my_bag/Apr-25-2022/13-48-35/: 13-48-35_0.db3  13-48-35_0.db3-shm  13-48-35_0.db3-wal
my_bag/Apr-25-2022/15-36-27/: 15-36-27_0.db3  15-36-27_0.db3-shm  15-36-27_0.db3-wal
my_bag/Apr-25-2022/17-14-35/: 17-14-35_0.db3  17-14-35_0.db3-shm  17-14-35_0.db3-wal
my_bag/Apr-25-2022/18-17-54/: 18-17-54_0.db3-shm  18-17-54_0.db3-wal
my_bag/Apr-25-2022/18-19-49/: 18-19-49_0.db3  18-19-49_0.db3-shm  18-19-49_0.db3-wal
my_bag/Apr-25-2022/18-2-38/: 18-2-38_0.db3  18-2-38_0.db3-shm  18-2-38_0.db3-wal
my_bag/Apr-25-2022/18-23-55/: 18-23-55_0.db3  18-23-55_0.db3-shm  18-23-55_0.db3-wal
my_bag/Apr-25-2022/18-3-11/: 18-3-11_0.db3  18-3-11_0.db3-shm  18-3-11_0.db3-wal
my_bag/Apr-26-2022/12-24-41/: 12-24-41_0.db3  12-24-41_0.db3-shm  12-24-41_0.db3-wal
my_bag/Apr-26-2022/12-27-56/: 12-27-56_0.db3  12-27-56_0.db3-shm  12-27-56_0.db3-wal
my_bag/Apr-26-2022/12-28-0/: 12-28-0_0.db3  12-28-0_0.db3-shm  12-28-0_0.db3-wal
my_bag/Apr-26-2022/12-36-29/: 12-36-29_0.db3-shm  12-36-29_0.db3-wal
my_bag/Apr-26-2022/12-37-46/: 12-37-46_0.db3  12-37-46_0.db3-shm  12-37-46_0.db3-wal
my_bag/Apr-26-2022/12-41-0/: 12-41-0_0.db3  12-41-0_0.db3-shm  12-41-0_0.db3-wal
my_bag/Apr-26-2022/12-47-57/: 12-47-57_0.db3-shm  12-47-57_0.db3-wal
my_bag/Apr-26-2022/12-49-47/: 12-49-47_0.db3-shm  12-49-47_0.db3-wal
my_bag/Apr-26-2022/12-50-45/: 12-50-45_0.db3  12-50-45_0.db3-shm  12-50-45_0.db3-wal
my_bag/Apr-26-2022/14-17-59/: 14-17-59_0.db3  14-17-59_0.db3-shm  14-17-59_0.db3-wal
my_bag/Apr-26-2022/14-22-58/: 14-22-58_0.db3-shm  14-22-58_0.db3-wal
my_bag/Apr-26-2022/15-48-14/: 15-48-14_0.db3  15-48-14_0.db3-shm  15-48-14_0.db3-wal
my_bag/Apr-27-2022/16-19-28/: 16-19-28_0.db3-shm  16-19-28_0.db3-wal
my_bag/Apr-27-2022/16-20-37/: 16-20-37_0.db3  16-20-37_0.db3-shm  16-20-37_0.db3-wal
my_bag/Apr-27-2022/16-6-18/: 16-6-18_0.db3  16-6-18_0.db3-shm  16-6-18_0.db3-wal
my_bag/Apr-27-2022/18-10-45/: 18-10-45_0.db3  18-10-45_0.db3-shm  18-10-45_0.db3-wal
my_bag/Apr-27-2022/18-5-50/: 18-5-50_0.db3  18-5-50_0.db3-shm  18-5-50_0.db3-wal
my_bag/Apr-27-2022/18-50-37/: 18-50-37_0.db3  18-50-37_0.db3-shm  18-50-37_0.db3-wal
my_bag/Apr-27-2022/19-3-42/: 19-3-42_0.db3  19-3-42_0.db3-shm  19-3-42_0.db3-wal
my_bag/Apr-27-2022/19-33-39/: 19-33-39_0.db3-wal
my_bag/Apr-27-2022/19-33-40/: 19-33-40_0.db3  19-33-40_0.db3-shm  19-33-40_0.db3-wal
my_bag/Apr-27-2022/19-33-41/: 19-33-41_0.db3  19-33-41_0.db3-shm  19-33-41_0.db3-wal
my_bag/Apr-27-2022/19-41-48/: 19-41-48_0.db3  19-41-48_0.db3-shm  19-41-48_0.db3-wal
my_bag/Apr-27-2022/19-42-37/: metadata.yaml
my_bag/Apr-9-2022/20:54:46/: 20:54:46_0.db3  metadata.yaml
my_bag/Jun-17-2022/20-52-12/: 20-52-12_0.db3  20-52-12_0.db3-shm  20-52-12_0.db3-wal
my_bag/Nov-7-2022/23-30-56/: 23-30-56_0.db3  (+2 more)
src/JNode_KeyboardInput/: package.xml  setup.cfg  setup.py
src/JNode_MotorController/: package.xml  setup.cfg  setup.py
src/bag_reader/: CMakeLists.txt  package.xml
src/bag_recorder/: package.xml  setup.cfg  setup.py
src/bag_recorder_cpp/: CMakeLists.txt  package.xml
src/bno055_imu_pub/: CMakeLists.txt  package.xml
src/bon055_imu_pub/: CMakeLists.txt  package.xml
src/interfaces/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/jetsonDisplay/: package.xml  setup.cfg  setup.py  spaceCalMW.ui
src/jetsonMainLogic/: package.xml  printTest.json  setup.cfg  setup.py
src/jetson_main/: package.xml  setup.cfg  setup.py
src/jetson_main_logic/: package.xml  setup.cfg  setup.py
src/level_motor_controller/: package.xml  setup.cfg  setup.py
src/main_gui/: package.xml  setup.cfg  setup.py
src/main_logic/: package.xml  setup.cfg  setup.py
src/my_package/: setup.py
src/pi_video_controller/: package.xml  setup.cfg  setup.py
src/print_motor_controller/: package.xml  setup.cfg  setup.py
src/projExec/: ledOn  ledZero
src/proj_exec/: CMakeLists.txt  package.xml
src/projector_exec/: package.xml  setup.cfg  setup.py
src/rPINode_Display/: package.xml  setup.cfg  setup.py
src/test_interfaces/: CMakeLists.txt  package.xml
src/test_pakage/: CMakeLists.txt  package.xml
src/test_pakage/api/: dlpc347x_internal_patterns.c  dlpc654x.c  dlpc654x.h
src/test_pakage/samples/: 654x_sample_code.docx  LEDZero.c  cypress_i2c.c  devasys_i2c.c  dlpc343x_samples.c  dlpc347x_dual_samples.c  dlpc347x_samples.c
src/test_pakage/samples/dlpc654x_samples/: CMakeLists.txt  CMakeSettings.json  unix_io.c
src/test_pakage/samples/dlpc654x_samples/bootloader_update_x54x_bin/: DLPC6540_BL_FW_Readme.txt  DLP_Clickwrap 2-24-21.docx  bootloaderToHeader.py
src/test_pakage/src/: test_node.cpp
(+234 files in other folders)
